Finished html structure

--- a/main.html
+++ b/main.html
@@ -1,12 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Explore sem limites</title>
   </head>
   <body>
-    
+    <header>
+      <img
+        src="./assets/astrounaut.png"
+        alt="A astronaut around three planets"
+      />
 
+      <h1>Explore sem limites</h1>
+
+      <p>Porque o aprendizado é contínuo</p>
+
+      <img
+        src="./assets/arrowDown.png"
+        alt="A circle with a arrow pointing down"
+      />
+    </header>
+
+    <main>
+      <div class="planets-box">
+        <div class="planet">
+          <img src="./assets/bluePlanet.png" alt="um planeta azul" />
+          <h3>Não pare nunca</h3>
+          <p>
+            Se você deseja ter sucesso nos estudos, é fundamental que você adote
+            uma mentalidade de "não pare nunca". Estudar de forma consistente e
+            contínua é a chave para o progresso e a conquista de seus objetivos.
+          </p>
+        </div>
+
+        <div class="planet">
+          <img src="./assets/yellowPlanet.png" alt="um planeta amarelo" />
+          <h3>Só volta</h3>
+          <p>
+            Se você parou ou perdeu o ritmo em alguma atividade ou projeto,
+            saiba que nunca é tarde para recomeçar. Às vezes, as circunstâncias
+            podem mudar, ou podemos nos sentir desmotivados ou sobrecarregados.
+          </p>
+        </div>
+
+        <div class="planet">
+          <img src="./assets/redPlanet.png" alt="um planeta vermelho" />
+          <h3>Siga seu ritmo</h3>
+          <p>
+            Avançar pouco a pouco mantém progresso constante em objetivos,
+            evitando parar ou desistir. Mesmo pequenos passos nos aproximam do
+            destino e motivam a continuidade. Não subestime o poder de cada ação
+            rumo ao objetivo final.
+          </p>
+        </div>
+      </div>
+
+      <div class="form">
+        <h2>Entre em contato</h2>
+
+        <input type="text" placeholder="Insira seu nome" />
+        <input type="email" name="" id="" placeholder="Insira seu email" />
+        <textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="Digite sua mensagem aqui..."
+        ></textarea>
+
+        <button>Enviar mensagem</button>
+      </div>
+    </main>
+    <footer>
+      <h1>© 2023 - Rocketseat Explorer</h1>
+    </footer>
   </body>
 </html>
