Made some little changes to HTML structure, before starting CSS

--- a/main.html
+++ b/main.html
@@ -59,8 +59,22 @@
       <div class="form">
         <h2>Entre em contato</h2>
 
-        <input type="text" placeholder="Insira seu nome" />
-        <input type="email" name="" id="" placeholder="Insira seu email" />
+        <div>
+          <img
+            src="./assets/personIcon.png"
+            alt="Boneco em formato de pessoa"
+          />
+          <input type="text" placeholder="Insira seu nome" />
+        </div>
+
+        <div>
+          <img
+            src="./assets/atIcon.png"
+            alt="simbolo universal para endereço de email"
+          />
+          <input type="email" name="" id="" placeholder="Insira seu email" />
+        </div>
+
         <textarea
           name=""
           id=""
